3r/1r Quatrimestre/AIC/Prácticas/prac5/input.yacc.output
Terminales no usados en la gramática

    FORM_REG_FF
    FORM_REG_R_FP
    FORM_REG_FP_R


Gramática

    0 $accept: r_inicio $end

    1 $@1: %empty

    2 r_inicio: LABEL $@1 r_linea_ensamblador
    3         | r_linea_ensamblador
    4         | %empty

    5 $@2: %empty

    6 r_linea_ensamblador: r_directiva NL $@2 r_inicio

    7 $@3: %empty

    8 r_linea_ensamblador: r_instruccion NL $@3 r_inicio
    9                    | NL r_inicio
   10                    | r_directiva
   11                    | r_instruccion

   12 r_directiva: DE_DATA
   13            | DE_TEXT
   14            | DE_GLOBL T_ALPHANUM

   15 $@4: %empty

   16 r_directiva: DE_BYTE $@4 r_lista_enteros

   17 $@5: %empty

   18 r_directiva: DE_HALF $@5 r_lista_enteros

   19 $@6: %empty

   20 r_directiva: DE_WORD $@6 r_lista_enteros

   21 $@7: %empty

   22 r_directiva: DE_DWORD $@7 r_lista_enteros

   23 $@8: %empty

   24 r_directiva: DE_FLOAT $@8 r_lista_reales

   25 $@9: %empty

   26 r_directiva: DE_DOUBLE $@9 r_lista_reales
   27            | DE_SPACE T_INT_LIT
   28            | DE_ASCIIZ T_STRING
   29            | DE_IREG r_valores_enteros
   30            | DE_FREG r_valores_fp
   31            | DE_BTB r_valores_btb

   32 $@10: %empty

   33 r_lista_enteros: T_INT_LIT $@10 r_lista_enteros_cont

   34 r_lista_enteros_cont: ',' r_lista_enteros
   35                     | %empty

   36 $@11: %empty

   37 r_lista_reales: T_FP_LIT $@11 r_lista_reales_cont

   38 $@12: %empty

   39 r_lista_reales: T_INT_LIT $@12 r_lista_reales_cont

   40 r_lista_reales_cont: ',' r_lista_reales
   41                    | %empty

   42 $@13: %empty

   43 r_valores_enteros: T_INT_LIT $@13 r_valores_enteros_cont

   44 r_valores_enteros_cont: ',' r_valores_enteros
   45                       | %empty

   46 $@14: %empty

   47 r_valores_fp: T_FP_LIT $@14 r_valores_fp_cont

   48 r_valores_fp_cont: ',' r_valores_fp
   49                  | %empty

   50 $@15: %empty

   51 r_valores_btb: T_INT_LIT $@15 r_valores_btb_cont

   52 r_valores_btb_cont: ',' r_valores_btb
   53                   | %empty

   54 r_inmediato_disp: T_INT_LIT
   55                 | T_ALPHANUM
   56                 | M_HI '(' T_ALPHANUM ')'
   57                 | M_LO '(' T_ALPHANUM ')'
   58                 | M_DISP '(' T_ALPHANUM ')'

   59 r_inmediato_lo: T_INT_LIT
   60               | T_ALPHANUM
   61               | M_HI '(' T_ALPHANUM ')'
   62               | M_LO '(' T_ALPHANUM ')'
   63               | M_DISP '(' T_ALPHANUM ')'

   64 r_inmediato_hi: T_INT_LIT
   65               | T_ALPHANUM
   66               | M_HI '(' T_ALPHANUM ')'
   67               | M_LO '(' T_ALPHANUM ')'
   68               | M_DISP '(' T_ALPHANUM ')'

   69 r_posicion: T_INT_LIT
   70           | T_ALPHANUM

   71 r_instruccion: PINST_LI REG_INT ',' T_INT_LIT
   72              | PINST_LA REG_INT ',' T_ALPHANUM
   73              | INST_RET
   74              | INST_NOP
   75              | INST_SYSCALL
   76              | FORM_INM_L REG_INT ',' r_inmediato_disp '(' REG_INT ')'
   77              | FORM_INM_FP_L REG_FP ',' r_inmediato_disp '(' REG_INT ')'
   78              | FORM_INM_S REG_INT ',' r_inmediato_disp '(' REG_INT ')'
   79              | FORM_INM_FP_S REG_FP ',' r_inmediato_disp '(' REG_INT ')'
   80              | FORM_REG REG_INT ',' REG_INT ',' REG_INT
   81              | FORM_FP_REG REG_FP ',' REG_FP ',' REG_FP
   82              | FORM_FP_REG_DF REG_FP ',' REG_FP
   83              | FORM_REG REG_INT ',' REG_INT ',' r_inmediato_disp
   84              | FORM_INM REG_INT ',' REG_INT ',' r_inmediato_disp
   85              | FORM_INM_T T_INT_LIT
   86              | FORM_INM_HI REG_INT ',' r_inmediato_hi
   87              | FORM_INM_LO REG_INT ',' r_inmediato_lo
   88              | FORM_FP_REG_FF REG_FP ',' REG_FP
   89              | FORM_INM_B_FI REG_INT ',' r_posicion
   90              | FORM_INM_B_FFI REG_INT ',' REG_INT ',' r_posicion
   91              | FORM_INM_B r_posicion
   92              | FORM_J r_posicion
   93              | FORM_J_F REG_INT


Terminales con las reglas donde aparecen

    $end (0) 0
    '(' (40) 56 57 58 61 62 63 66 67 68 76 77 78 79
    ')' (41) 56 57 58 61 62 63 66 67 68 76 77 78 79
    ',' (44) 34 40 44 48 52 71 72 76 77 78 79 80 81 82 83 84 86 87 88 89 90
    error (256)
    NL <ivalue> (258) 6 8 9
    T_INT_LIT <ivalue> (259) 27 33 39 43 51 54 59 64 69 71 85
    T_FP_LIT <fvalue> (260) 37 47
    T_ALPHANUM <cvalue> (261) 14 55 56 57 58 60 61 62 63 65 66 67 68 70 72
    T_STRING <cvalue> (262) 28
    REG_INT <ivalue> (263) 71 72 76 77 78 79 80 83 84 86 87 89 90 93
    REG_FP <ivalue> (264) 77 79 81 82 88
    DE_DATA <ivalue> (265) 12
    DE_TEXT <ivalue> (266) 13
    DE_SPACE <ivalue> (267) 27
    DE_GLOBL <ivalue> (268) 14
    DE_IREG <ivalue> (269) 29
    DE_FREG <ivalue> (270) 30
    DE_ASCIIZ <ivalue> (271) 28
    DE_BTB <ivalue> (272) 31
    DE_BYTE <ivalue> (273) 16
    DE_HALF <ivalue> (274) 18
    DE_WORD <ivalue> (275) 20
    DE_DWORD <ivalue> (276) 22
    DE_FLOAT <ivalue> (277) 24
    DE_DOUBLE <ivalue> (278) 26
    FORM_INM <ivalue> (279) 84
    FORM_INM_L <ivalue> (280) 76
    FORM_INM_S <ivalue> (281) 78
    FORM_INM_HI <ivalue> (282) 86
    FORM_INM_LO <ivalue> (283) 87
    FORM_INM_B <ivalue> (284) 91
    FORM_INM_B_FI <ivalue> (285) 89
    FORM_INM_B_FFI <ivalue> (286) 90
    FORM_INM_T <ivalue> (287) 85
    INST_NOP <ivalue> (288) 74
    INST_RET <ivalue> (289) 73
    INST_SYSCALL <ivalue> (290) 75
    FORM_REG <ivalue> (291) 80 83
    FORM_REG_FF <ivalue> (292)
    FORM_INM_FP_L <ivalue> (293) 77
    FORM_INM_FP_S <ivalue> (294) 79
    FORM_FP_REG <ivalue> (295) 81
    FORM_FP_REG_FF <ivalue> (296) 88
    FORM_FP_REG_DF <ivalue> (297) 82
    FORM_REG_R_FP <ivalue> (298)
    FORM_REG_FP_R <ivalue> (299)
    FORM_J <ivalue> (300) 92
    FORM_J_F <ivalue> (301) 93
    LABEL <cvalue> (302) 2
    PINST_LA <ivalue> (303) 72
    PINST_LI <ivalue> (304) 71
    M_LO <ivalue> (305) 57 62 67
    M_HI <ivalue> (306) 56 61 66
    M_DISP <ivalue> (307) 58 63 68


No terminales con las reglas donde aparecen

    $accept (56)
        on left: 0
    r_inicio (57)
        on left: 2 3 4
        on right: 0 6 8 9
    $@1 (58)
        on left: 1
        on right: 2
    r_linea_ensamblador (59)
        on left: 6 8 9 10 11
        on right: 2 3
    $@2 (60)
        on left: 5
        on right: 6
    $@3 (61)
        on left: 7
        on right: 8
    r_directiva (62)
        on left: 12 13 14 16 18 20 22 24 26 27 28 29 30 31
        on right: 6 10
    $@4 (63)
        on left: 15
        on right: 16
    $@5 (64)
        on left: 17
        on right: 18
    $@6 (65)
        on left: 19
        on right: 20
    $@7 (66)
        on left: 21
        on right: 22
    $@8 (67)
        on left: 23
        on right: 24
    $@9 (68)
        on left: 25
        on right: 26
    r_lista_enteros (69)
        on left: 33
        on right: 16 18 20 22 34
    $@10 (70)
        on left: 32
        on right: 33
    r_lista_enteros_cont (71)
        on left: 34 35
        on right: 33
    r_lista_reales (72)
        on left: 37 39
        on right: 24 26 40
    $@11 (73)
        on left: 36
        on right: 37
    $@12 (74)
        on left: 38
        on right: 39
    r_lista_reales_cont (75)
        on left: 40 41
        on right: 37 39
    r_valores_enteros (76)
        on left: 43
        on right: 29 44
    $@13 (77)
        on left: 42
        on right: 43
    r_valores_enteros_cont (78)
        on left: 44 45
        on right: 43
    r_valores_fp (79)
        on left: 47
        on right: 30 48
    $@14 (80)
        on left: 46
        on right: 47
    r_valores_fp_cont (81)
        on left: 48 49
        on right: 47
    r_valores_btb (82)
        on left: 51
        on right: 31 52
    $@15 (83)
        on left: 50
        on right: 51
    r_valores_btb_cont (84)
        on left: 52 53
        on right: 51
    r_inmediato_disp <ivalue> (85)
        on left: 54 55 56 57 58
        on right: 76 77 78 79 83 84
    r_inmediato_lo <ivalue> (86)
        on left: 59 60 61 62 63
        on right: 87
    r_inmediato_hi <ivalue> (87)
        on left: 64 65 66 67 68
        on right: 86
    r_posicion <ivalue> (88)
        on left: 69 70
        on right: 89 90 91 92
    r_instruccion (89)
        on left: 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93
        on right: 8 11


Estado 0

    0 $accept: . r_inicio $end

    NL              desplazar e ir al estado 1
    DE_DATA         desplazar e ir al estado 2
    DE_TEXT         desplazar e ir al estado 3
    DE_SPACE        desplazar e ir al estado 4
    DE_GLOBL        desplazar e ir al estado 5
    DE_IREG         desplazar e ir al estado 6
    DE_FREG         desplazar e ir al estado 7
    DE_ASCIIZ       desplazar e ir al estado 8
    DE_BTB          desplazar e ir al estado 9
    DE_BYTE         desplazar e ir al estado 10
    DE_HALF         desplazar e ir al estado 11
    DE_WORD         desplazar e ir al estado 12
    DE_DWORD        desplazar e ir al estado 13
    DE_FLOAT        desplazar e ir al estado 14
    DE_DOUBLE       desplazar e ir al estado 15
    FORM_INM        desplazar e ir al estado 16
    FORM_INM_L      desplazar e ir al estado 17
    FORM_INM_S      desplazar e ir al estado 18
    FORM_INM_HI     desplazar e ir al estado 19
    FORM_INM_LO     desplazar e ir al estado 20
    FORM_INM_B      desplazar e ir al estado 21
    FORM_INM_B_FI   desplazar e ir al estado 22
    FORM_INM_B_FFI  desplazar e ir al estado 23
    FORM_INM_T      desplazar e ir al estado 24
    INST_NOP        desplazar e ir al estado 25
    INST_RET        desplazar e ir al estado 26
    INST_SYSCALL    desplazar e ir al estado 27
    FORM_REG        desplazar e ir al estado 28
    FORM_INM_FP_L   desplazar e ir al estado 29
    FORM_INM_FP_S   desplazar e ir al estado 30
    FORM_FP_REG     desplazar e ir al estado 31
    FORM_FP_REG_FF  desplazar e ir al estado 32
    FORM_FP_REG_DF  desplazar e ir al estado 33
    FORM_J          desplazar e ir al estado 34
    FORM_J_F        desplazar e ir al estado 35
    LABEL           desplazar e ir al estado 36
    PINST_LA        desplazar e ir al estado 37
    PINST_LI        desplazar e ir al estado 38

    $default  reduce usando la regla 4 (r_inicio)

    r_inicio             ir al estado 39
    r_linea_ensamblador  ir al estado 40
    r_directiva          ir al estado 41
    r_instruccion        ir al estado 42


Estado 1

    9 r_linea_ensamblador: NL . r_inicio

    NL              desplazar e ir al estado 1
    DE_DATA         desplazar e ir al estado 2
    DE_TEXT         desplazar e ir al estado 3
    DE_SPACE        desplazar e ir al estado 4
    DE_GLOBL        desplazar e ir al estado 5
    DE_IREG         desplazar e ir al estado 6
    DE_FREG         desplazar e ir al estado 7
    DE_ASCIIZ       desplazar e ir al estado 8
    DE_BTB          desplazar e ir al estado 9
    DE_BYTE         desplazar e ir al estado 10
    DE_HALF         desplazar e ir al estado 11
    DE_WORD         desplazar e ir al estado 12
    DE_DWORD        desplazar e ir al estado 13
    DE_FLOAT        desplazar e ir al estado 14
    DE_DOUBLE       desplazar e ir al estado 15
    FORM_INM        desplazar e ir al estado 16
    FORM_INM_L      desplazar e ir al estado 17
    FORM_INM_S      desplazar e ir al estado 18
    FORM_INM_HI     desplazar e ir al estado 19
    FORM_INM_LO     desplazar e ir al estado 20
    FORM_INM_B      desplazar e ir al estado 21
    FORM_INM_B_FI   desplazar e ir al estado 22
    FORM_INM_B_FFI  desplazar e ir al estado 23
    FORM_INM_T      desplazar e ir al estado 24
    INST_NOP        desplazar e ir al estado 25
    INST_RET        desplazar e ir al estado 26
    INST_SYSCALL    desplazar e ir al estado 27
    FORM_REG        desplazar e ir al estado 28
    FORM_INM_FP_L   desplazar e ir al estado 29
    FORM_INM_FP_S   desplazar e ir al estado 30
    FORM_FP_REG     desplazar e ir al estado 31
    FORM_FP_REG_FF  desplazar e ir al estado 32
    FORM_FP_REG_DF  desplazar e ir al estado 33
    FORM_J          desplazar e ir al estado 34
    FORM_J_F        desplazar e ir al estado 35
    LABEL           desplazar e ir al estado 36
    PINST_LA        desplazar e ir al estado 37
    PINST_LI        desplazar e ir al estado 38

    $default  reduce usando la regla 4 (r_inicio)

    r_inicio             ir al estado 43
    r_linea_ensamblador  ir al estado 40
    r_directiva          ir al estado 41
    r_instruccion        ir al estado 42


Estado 2

   12 r_directiva: DE_DATA .

    $default  reduce usando la regla 12 (r_directiva)


Estado 3

   13 r_directiva: DE_TEXT .

    $default  reduce usando la regla 13 (r_directiva)


Estado 4

   27 r_directiva: DE_SPACE . T_INT_LIT

    T_INT_LIT  desplazar e ir al estado 44


Estado 5

   14 r_directiva: DE_GLOBL . T_ALPHANUM

    T_ALPHANUM  desplazar e ir al estado 45


Estado 6

   29 r_directiva: DE_IREG . r_valores_enteros

    T_INT_LIT  desplazar e ir al estado 46

    r_valores_enteros  ir al estado 47


Estado 7

   30 r_directiva: DE_FREG . r_valores_fp

    T_FP_LIT  desplazar e ir al estado 48

    r_valores_fp  ir al estado 49


Estado 8

   28 r_directiva: DE_ASCIIZ . T_STRING

    T_STRING  desplazar e ir al estado 50


Estado 9

   31 r_directiva: DE_BTB . r_valores_btb

    T_INT_LIT  desplazar e ir al estado 51

    r_valores_btb  ir al estado 52


Estado 10

   16 r_directiva: DE_BYTE . $@4 r_lista_enteros

    $default  reduce usando la regla 15 ($@4)

    $@4  ir al estado 53


Estado 11

   18 r_directiva: DE_HALF . $@5 r_lista_enteros

    $default  reduce usando la regla 17 ($@5)

    $@5  ir al estado 54


Estado 12

   20 r_directiva: DE_WORD . $@6 r_lista_enteros

    $default  reduce usando la regla 19 ($@6)

    $@6  ir al estado 55


Estado 13

   22 r_directiva: DE_DWORD . $@7 r_lista_enteros

    $default  reduce usando la regla 21 ($@7)

    $@7  ir al estado 56


Estado 14

   24 r_directiva: DE_FLOAT . $@8 r_lista_reales

    $default  reduce usando la regla 23 ($@8)

    $@8  ir al estado 57


Estado 15

   26 r_directiva: DE_DOUBLE . $@9 r_lista_reales

    $default  reduce usando la regla 25 ($@9)

    $@9  ir al estado 58


Estado 16

   84 r_instruccion: FORM_INM . REG_INT ',' REG_INT ',' r_inmediato_disp

    REG_INT  desplazar e ir al estado 59


Estado 17

   76 r_instruccion: FORM_INM_L . REG_INT ',' r_inmediato_disp '(' REG_INT ')'

    REG_INT  desplazar e ir al estado 60


Estado 18

   78 r_instruccion: FORM_INM_S . REG_INT ',' r_inmediato_disp '(' REG_INT ')'

    REG_INT  desplazar e ir al estado 61


Estado 19

   86 r_instruccion: FORM_INM_HI . REG_INT ',' r_inmediato_hi

    REG_INT  desplazar e ir al estado 62


Estado 20

   87 r_instruccion: FORM_INM_LO . REG_INT ',' r_inmediato_lo

    REG_INT  desplazar e ir al estado 63


Estado 21

   91 r_instruccion: FORM_INM_B . r_posicion

    T_INT_LIT   desplazar e ir al estado 64
    T_ALPHANUM  desplazar e ir al estado 65

    r_posicion  ir al estado 66


Estado 22

   89 r_instruccion: FORM_INM_B_FI . REG_INT ',' r_posicion

    REG_INT  desplazar e ir al estado 67


Estado 23

   90 r_instruccion: FORM_INM_B_FFI . REG_INT ',' REG_INT ',' r_posicion

    REG_INT  desplazar e ir al estado 68


Estado 24

   85 r_instruccion: FORM_INM_T . T_INT_LIT

    T_INT_LIT  desplazar e ir al estado 69


Estado 25

   74 r_instruccion: INST_NOP .

    $default  reduce usando la regla 74 (r_instruccion)


Estado 26

   73 r_instruccion: INST_RET .

    $default  reduce usando la regla 73 (r_instruccion)


Estado 27

   75 r_instruccion: INST_SYSCALL .

    $default  reduce usando la regla 75 (r_instruccion)


Estado 28

   80 r_instruccion: FORM_REG . REG_INT ',' REG_INT ',' REG_INT
   83              | FORM_REG . REG_INT ',' REG_INT ',' r_inmediato_disp

    REG_INT  desplazar e ir al estado 70


Estado 29

   77 r_instruccion: FORM_INM_FP_L . REG_FP ',' r_inmediato_disp '(' REG_INT ')'

    REG_FP  desplazar e ir al estado 71


Estado 30

   79 r_instruccion: FORM_INM_FP_S . REG_FP ',' r_inmediato_disp '(' REG_INT ')'

    REG_FP  desplazar e ir al estado 72


Estado 31

   81 r_instruccion: FORM_FP_REG . REG_FP ',' REG_FP ',' REG_FP

    REG_FP  desplazar e ir al estado 73


Estado 32

   88 r_instruccion: FORM_FP_REG_FF . REG_FP ',' REG_FP

    REG_FP  desplazar e ir al estado 74


Estado 33

   82 r_instruccion: FORM_FP_REG_DF . REG_FP ',' REG_FP

    REG_FP  desplazar e ir al estado 75


Estado 34

   92 r_instruccion: FORM_J . r_posicion

    T_INT_LIT   desplazar e ir al estado 64
    T_ALPHANUM  desplazar e ir al estado 65

    r_posicion  ir al estado 76


Estado 35

   93 r_instruccion: FORM_J_F . REG_INT

    REG_INT  desplazar e ir al estado 77


Estado 36

    2 r_inicio: LABEL . $@1 r_linea_ensamblador

    $default  reduce usando la regla 1 ($@1)

    $@1  ir al estado 78


Estado 37

   72 r_instruccion: PINST_LA . REG_INT ',' T_ALPHANUM

    REG_INT  desplazar e ir al estado 79


Estado 38

   71 r_instruccion: PINST_LI . REG_INT ',' T_INT_LIT

    REG_INT  desplazar e ir al estado 80


Estado 39

    0 $accept: r_inicio . $end

    $end  desplazar e ir al estado 81


Estado 40

    3 r_inicio: r_linea_ensamblador .

    $default  reduce usando la regla 3 (r_inicio)


Estado 41

    6 r_linea_ensamblador: r_directiva . NL $@2 r_inicio
   10                    | r_directiva .

    NL  desplazar e ir al estado 82

    $default  reduce usando la regla 10 (r_linea_ensamblador)


Estado 42

    8 r_linea_ensamblador: r_instruccion . NL $@3 r_inicio
   11                    | r_instruccion .

    NL  desplazar e ir al estado 83

    $default  reduce usando la regla 11 (r_linea_ensamblador)


Estado 43

    9 r_linea_ensamblador: NL r_inicio .

    $default  reduce usando la regla 9 (r_linea_ensamblador)


Estado 44

   27 r_directiva: DE_SPACE T_INT_LIT .

    $default  reduce usando la regla 27 (r_directiva)


Estado 45

   14 r_directiva: DE_GLOBL T_ALPHANUM .

    $default  reduce usando la regla 14 (r_directiva)


Estado 46

   43 r_valores_enteros: T_INT_LIT . $@13 r_valores_enteros_cont

    $default  reduce usando la regla 42 ($@13)

    $@13  ir al estado 84


Estado 47

   29 r_directiva: DE_IREG r_valores_enteros .

    $default  reduce usando la regla 29 (r_directiva)


Estado 48

   47 r_valores_fp: T_FP_LIT . $@14 r_valores_fp_cont

    $default  reduce usando la regla 46 ($@14)

    $@14  ir al estado 85


Estado 49

   30 r_directiva: DE_FREG r_valores_fp .

    $default  reduce usando la regla 30 (r_directiva)


Estado 50

   28 r_directiva: DE_ASCIIZ T_STRING .

    $default  reduce usando la regla 28 (r_directiva)


Estado 51

   51 r_valores_btb: T_INT_LIT . $@15 r_valores_btb_cont

    $default  reduce usando la regla 50 ($@15)

    $@15  ir al estado 86


Estado 52

   31 r_directiva: DE_BTB r_valores_btb .

    $default  reduce usando la regla 31 (r_directiva)


Estado 53

   16 r_directiva: DE_BYTE $@4 . r_lista_enteros

    T_INT_LIT  desplazar e ir al estado 87

    r_lista_enteros  ir al estado 88


Estado 54

   18 r_directiva: DE_HALF $@5 . r_lista_enteros

    T_INT_LIT  desplazar e ir al estado 87

    r_lista_enteros  ir al estado 89


Estado 55

   20 r_directiva: DE_WORD $@6 . r_lista_enteros

    T_INT_LIT  desplazar e ir al estado 87

    r_lista_enteros  ir al estado 90


Estado 56

   22 r_directiva: DE_DWORD $@7 . r_lista_enteros

    T_INT_LIT  desplazar e ir al estado 87

    r_lista_enteros  ir al estado 91


Estado 57

   24 r_directiva: DE_FLOAT $@8 . r_lista_reales

    T_INT_LIT  desplazar e ir al estado 92
    T_FP_LIT   desplazar e ir al estado 93

    r_lista_reales  ir al estado 94


Estado 58

   26 r_directiva: DE_DOUBLE $@9 . r_lista_reales

    T_INT_LIT  desplazar e ir al estado 92
    T_FP_LIT   desplazar e ir al estado 93

    r_lista_reales  ir al estado 95


Estado 59

   84 r_instruccion: FORM_INM REG_INT . ',' REG_INT ',' r_inmediato_disp

    ','  desplazar e ir al estado 96


Estado 60

   76 r_instruccion: FORM_INM_L REG_INT . ',' r_inmediato_disp '(' REG_INT ')'

    ','  desplazar e ir al estado 97


Estado 61

   78 r_instruccion: FORM_INM_S REG_INT . ',' r_inmediato_disp '(' REG_INT ')'

    ','  desplazar e ir al estado 98


Estado 62

   86 r_instruccion: FORM_INM_HI REG_INT . ',' r_inmediato_hi

    ','  desplazar e ir al estado 99


Estado 63

   87 r_instruccion: FORM_INM_LO REG_INT . ',' r_inmediato_lo

    ','  desplazar e ir al estado 100


Estado 64

   69 r_posicion: T_INT_LIT .

    $default  reduce usando la regla 69 (r_posicion)


Estado 65

   70 r_posicion: T_ALPHANUM .

    $default  reduce usando la regla 70 (r_posicion)


Estado 66

   91 r_instruccion: FORM_INM_B r_posicion .

    $default  reduce usando la regla 91 (r_instruccion)


Estado 67

   89 r_instruccion: FORM_INM_B_FI REG_INT . ',' r_posicion

    ','  desplazar e ir al estado 101


Estado 68

   90 r_instruccion: FORM_INM_B_FFI REG_INT . ',' REG_INT ',' r_posicion

    ','  desplazar e ir al estado 102


Estado 69

   85 r_instruccion: FORM_INM_T T_INT_LIT .

    $default  reduce usando la regla 85 (r_instruccion)


Estado 70

   80 r_instruccion: FORM_REG REG_INT . ',' REG_INT ',' REG_INT
   83              | FORM_REG REG_INT . ',' REG_INT ',' r_inmediato_disp

    ','  desplazar e ir al estado 103


Estado 71

   77 r_instruccion: FORM_INM_FP_L REG_FP . ',' r_inmediato_disp '(' REG_INT ')'

    ','  desplazar e ir al estado 104


Estado 72

   79 r_instruccion: FORM_INM_FP_S REG_FP . ',' r_inmediato_disp '(' REG_INT ')'

    ','  desplazar e ir al estado 105


Estado 73

   81 r_instruccion: FORM_FP_REG REG_FP . ',' REG_FP ',' REG_FP

    ','  desplazar e ir al estado 106


Estado 74

   88 r_instruccion: FORM_FP_REG_FF REG_FP . ',' REG_FP

    ','  desplazar e ir al estado 107


Estado 75

   82 r_instruccion: FORM_FP_REG_DF REG_FP . ',' REG_FP

    ','  desplazar e ir al estado 108


Estado 76

   92 r_instruccion: FORM_J r_posicion .

    $default  reduce usando la regla 92 (r_instruccion)


Estado 77

   93 r_instruccion: FORM_J_F REG_INT .

    $default  reduce usando la regla 93 (r_instruccion)


Estado 78

    2 r_inicio: LABEL $@1 . r_linea_ensamblador

    NL              desplazar e ir al estado 1
    DE_DATA         desplazar e ir al estado 2
    DE_TEXT         desplazar e ir al estado 3
    DE_SPACE        desplazar e ir al estado 4
    DE_GLOBL        desplazar e ir al estado 5
    DE_IREG         desplazar e ir al estado 6
    DE_FREG         desplazar e ir al estado 7
    DE_ASCIIZ       desplazar e ir al estado 8
    DE_BTB          desplazar e ir al estado 9
    DE_BYTE         desplazar e ir al estado 10
    DE_HALF         desplazar e ir al estado 11
    DE_WORD         desplazar e ir al estado 12
    DE_DWORD        desplazar e ir al estado 13
    DE_FLOAT        desplazar e ir al estado 14
    DE_DOUBLE       desplazar e ir al estado 15
    FORM_INM        desplazar e ir al estado 16
    FORM_INM_L      desplazar e ir al estado 17
    FORM_INM_S      desplazar e ir al estado 18
    FORM_INM_HI     desplazar e ir al estado 19
    FORM_INM_LO     desplazar e ir al estado 20
    FORM_INM_B      desplazar e ir al estado 21
    FORM_INM_B_FI   desplazar e ir al estado 22
    FORM_INM_B_FFI  desplazar e ir al estado 23
    FORM_INM_T      desplazar e ir al estado 24
    INST_NOP        desplazar e ir al estado 25
    INST_RET        desplazar e ir al estado 26
    INST_SYSCALL    desplazar e ir al estado 27
    FORM_REG        desplazar e ir al estado 28
    FORM_INM_FP_L   desplazar e ir al estado 29
    FORM_INM_FP_S   desplazar e ir al estado 30
    FORM_FP_REG     desplazar e ir al estado 31
    FORM_FP_REG_FF  desplazar e ir al estado 32
    FORM_FP_REG_DF  desplazar e ir al estado 33
    FORM_J          desplazar e ir al estado 34
    FORM_J_F        desplazar e ir al estado 35
    PINST_LA        desplazar e ir al estado 37
    PINST_LI        desplazar e ir al estado 38

    r_linea_ensamblador  ir al estado 109
    r_directiva          ir al estado 41
    r_instruccion        ir al estado 42


Estado 79

   72 r_instruccion: PINST_LA REG_INT . ',' T_ALPHANUM

    ','  desplazar e ir al estado 110


Estado 80

   71 r_instruccion: PINST_LI REG_INT . ',' T_INT_LIT

    ','  desplazar e ir al estado 111


Estado 81

    0 $accept: r_inicio $end .

    $default  aceptar


Estado 82

    6 r_linea_ensamblador: r_directiva NL . $@2 r_inicio

    $default  reduce usando la regla 5 ($@2)

    $@2  ir al estado 112


Estado 83

    8 r_linea_ensamblador: r_instruccion NL . $@3 r_inicio

    $default  reduce usando la regla 7 ($@3)

    $@3  ir al estado 113


Estado 84

   43 r_valores_enteros: T_INT_LIT $@13 . r_valores_enteros_cont

    ','  desplazar e ir al estado 114

    $default  reduce usando la regla 45 (r_valores_enteros_cont)

    r_valores_enteros_cont  ir al estado 115


Estado 85

   47 r_valores_fp: T_FP_LIT $@14 . r_valores_fp_cont

    ','  desplazar e ir al estado 116

    $default  reduce usando la regla 49 (r_valores_fp_cont)

    r_valores_fp_cont  ir al estado 117


Estado 86

   51 r_valores_btb: T_INT_LIT $@15 . r_valores_btb_cont

    ','  desplazar e ir al estado 118

    $default  reduce usando la regla 53 (r_valores_btb_cont)

    r_valores_btb_cont  ir al estado 119


Estado 87

   33 r_lista_enteros: T_INT_LIT . $@10 r_lista_enteros_cont

    $default  reduce usando la regla 32 ($@10)

    $@10  ir al estado 120


Estado 88

   16 r_directiva: DE_BYTE $@4 r_lista_enteros .

    $default  reduce usando la regla 16 (r_directiva)


Estado 89

   18 r_directiva: DE_HALF $@5 r_lista_enteros .

    $default  reduce usando la regla 18 (r_directiva)


Estado 90

   20 r_directiva: DE_WORD $@6 r_lista_enteros .

    $default  reduce usando la regla 20 (r_directiva)


Estado 91

   22 r_directiva: DE_DWORD $@7 r_lista_enteros .

    $default  reduce usando la regla 22 (r_directiva)


Estado 92

   39 r_lista_reales: T_INT_LIT . $@12 r_lista_reales_cont

    $default  reduce usando la regla 38 ($@12)

    $@12  ir al estado 121


Estado 93

   37 r_lista_reales: T_FP_LIT . $@11 r_lista_reales_cont

    $default  reduce usando la regla 36 ($@11)

    $@11  ir al estado 122


Estado 94

   24 r_directiva: DE_FLOAT $@8 r_lista_reales .

    $default  reduce usando la regla 24 (r_directiva)


Estado 95

   26 r_directiva: DE_DOUBLE $@9 r_lista_reales .

    $default  reduce usando la regla 26 (r_directiva)


Estado 96

   84 r_instruccion: FORM_INM REG_INT ',' . REG_INT ',' r_inmediato_disp

    REG_INT  desplazar e ir al estado 123


Estado 97

   76 r_instruccion: FORM_INM_L REG_INT ',' . r_inmediato_disp '(' REG_INT ')'

    T_INT_LIT   desplazar e ir al estado 124
    T_ALPHANUM  desplazar e ir al estado 125
    M_LO        desplazar e ir al estado 126
    M_HI        desplazar e ir al estado 127
    M_DISP      desplazar e ir al estado 128

    r_inmediato_disp  ir al estado 129


Estado 98

   78 r_instruccion: FORM_INM_S REG_INT ',' . r_inmediato_disp '(' REG_INT ')'

    T_INT_LIT   desplazar e ir al estado 124
    T_ALPHANUM  desplazar e ir al estado 125
    M_LO        desplazar e ir al estado 126
    M_HI        desplazar e ir al estado 127
    M_DISP      desplazar e ir al estado 128

    r_inmediato_disp  ir al estado 130


Estado 99

   86 r_instruccion: FORM_INM_HI REG_INT ',' . r_inmediato_hi

    T_INT_LIT   desplazar e ir al estado 131
    T_ALPHANUM  desplazar e ir al estado 132
    M_LO        desplazar e ir al estado 133
    M_HI        desplazar e ir al estado 134
    M_DISP      desplazar e ir al estado 135

    r_inmediato_hi  ir al estado 136


Estado 100

   87 r_instruccion: FORM_INM_LO REG_INT ',' . r_inmediato_lo

    T_INT_LIT   desplazar e ir al estado 137
    T_ALPHANUM  desplazar e ir al estado 138
    M_LO        desplazar e ir al estado 139
    M_HI        desplazar e ir al estado 140
    M_DISP      desplazar e ir al estado 141

    r_inmediato_lo  ir al estado 142


Estado 101

   89 r_instruccion: FORM_INM_B_FI REG_INT ',' . r_posicion

    T_INT_LIT   desplazar e ir al estado 64
    T_ALPHANUM  desplazar e ir al estado 65

    r_posicion  ir al estado 143


Estado 102

   90 r_instruccion: FORM_INM_B_FFI REG_INT ',' . REG_INT ',' r_posicion

    REG_INT  desplazar e ir al estado 144


Estado 103

   80 r_instruccion: FORM_REG REG_INT ',' . REG_INT ',' REG_INT
   83              | FORM_REG REG_INT ',' . REG_INT ',' r_inmediato_disp
